conf_files/rules.v4
# Generated by xtables-save v1.8.2 on Tue Mar 30 02:12:03 2021
*filter
:INPUT ACCEPT [907:75193]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [935:71906]

# First rule in chain allows for device requested traffic to not be logged as port scans
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# ICMP ignored due to abnormal alerting
-A INPUT -p icmp -j ACCEPT
-A INPUT -j LOG --log-prefix "DROP "
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j LOG --log-prefix "ILLEGALSSHCONNECTED "
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j LOG --log-prefix "DROP "
-A FORWARD -j DROP
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Mar 30 02:12:03 2021
